--- a/src/components/Exercises/Exercises.css
+++ b/src/components/Exercises/Exercises.css
@@ -9,12 +9,6 @@
     margin: 0 auto;
 }
 
-.header{
-    display: flex;
-    align-items: center;
-    margin: 100px 0 40px 0;
-}
-
 .exercises{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -24,16 +18,7 @@
 
 .exercises_title{
     font-size: 28px;
-}
-
-.brand_logo{
-    width: 60px;
-    height: 60px;
-    margin-right: 16px;
-}
-.brand_name{
-    margin: 0;
-    font-size: 34px;
+    margin: 0 0 50px 0;
 }
 
 .execises_details_container{
