--- a/src/components/Exercises/Exercises.css
+++ b/src/components/Exercises/Exercises.css
@@ -16,11 +16,7 @@
     margin: 26px 0;
 }
 
-.exercises_title{
-    font-size: 28px;
-    margin: 0 0 50px 0;
-}
-
 .execises_details_container{
     background-color: #222;
+    padding: 0 30px;
 }
