modified, organized and cleaned code

--- a/src/components/Exercise/Exercise.css
+++ b/src/components/Exercise/Exercise.css
@@ -38,3 +38,9 @@
 .btn_add:hover{
     background-color: #333;
 }
+
+@media screen and (max-width: 768px) {
+    .image{
+        height: 150px;
+    }
+}
