--- a/src/components/Exercises/Exercises.css
+++ b/src/components/Exercises/Exercises.css
@@ -1,7 +1,6 @@
 .exercises_container{
     display: grid;
     grid-template-columns: 3fr 1fr;
-
 }
 
 .exercises_name_container{
@@ -19,4 +18,14 @@
 .execises_details_container{
     background-color: #222;
     padding: 0 30px;
+}
+
+@media screen and (max-width: 768px) {
+    .exercises_container{
+        grid-template-columns: 1fr;
+        row-gap: 70px;
+    }
+    .exercises{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
