--- a/src/components/Break/Break.css
+++ b/src/components/Break/Break.css
@@ -4,9 +4,9 @@
 }
 .break_time{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background-color: #0d0d0d;
     border-radius: 10px;
-    padding: 16px 0;
+    padding: 20px 0;
     margin-top: 40px;
 }
